--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <h3>Certificações</h3>
             <ol type="1">
                 <li>Certificação CS50x - Harvard <strong>(Introduction to Computer Science)</strong></li>
-                <li>Certificação JavaScript Basico - Curso em Video</li>
-                <li>Certificação HTML5 Basico - Curso em Video</li>
-                <li>Certificação CSS3 Basico - Curso em Video</li>
+                <li>Certificação JavaScript Basico - <strong>Curso em Video</strong></li>
+                <li>Certificação HTML5 Basico - <strong>Curso em Video</strong></li>
+                <li>Certificação CSS3 Basico - <strong>Curso em Video</strong></li>
 
             </ol>
         </div>
