--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </ol>
     </div>
     <div class="footer">
-        Develope by @copyPaulo Junior
+        Developed by @copyPaulo Junior
     </div>
 </body>
 </html>
