--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 
         <h3>Certificações</h3>
         <ol type="1">
-            <li>Certificação CS50x - Harvard <strong>(Introduction to Computer Science)</strong></li>
-            <li>Certificação JavaScript Basico - <strong>Curso em Video</strong></li>
-            <li>Certificação HTML5 Basico - <strong>Curso em Video</strong></li>
-            <li>Certificação CSS3 Basico - <strong>Curso em Video</strong></li>
+            <li>Certificação CS50x - Harvard <strong>(Introduction to Computer Science) [70Hs]</strong></li>
+            <li>Certificação JavaScript Basico - <strong>Curso em Video</strong> [40Hs]</li>
+            <li>Certificação HTML5 Basico - <strong>Curso em Video</strong> [40Hs]</li>
+            <li>Certificação CSS3 Basico - <strong>Curso em Video</strong> [40Hs</li>
 
         </ol>
     </div>
