--- a/index.html
+++ b/index.html
@@ -37,10 +37,15 @@
         <h3>Conhecimentos</h3>
 
         <ul>
-            <li> JavaScript</li>
+            <li>Algoritimos</li>
+            <li>JavaScript</li>
             <li>Python</li>
             <li>C</li>
-            <li>SQL</li>
+            <li>SQLite</li>
+            <li>Flask</li>
+            <li>React.js</li>
+            <li>Node.js</li>
+            <li>Next.js</li>
             <li>HMTL</li>
             <li>CSS</li>
         </ul>
